<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/setting_rootView"
    android:background="#f2f4f5">

    <FrameLayout
        android:id="@+id/setting_titleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#3f51b5"
        android:clipToPadding="true"
        android:fitsSystemWindows="true">

        <ImageButton
            android:id="@+id/actionbar_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="12dp"
            android:layout_marginEnd="12dp"
            android:background="#00000000"
            android:gravity="center"
            android:src="@mipmap/ic_menu_back" />

        <TextView
            android:id="@+id/actionbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/setting"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </FrameLayout>
    <com.laughing8.attendancecheckingsystem.view.SettingViewFroward
        android:layout_marginTop="10dp"
        android:id="@+id/account_setting"
        app:textLeft="@string/user_setting"
        app:textRight="@string/nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <com.laughing8.attendancecheckingsystem.view.SettingViewFroward
        android:layout_marginTop="10dp"
        android:id="@+id/current_table"
        app:textLeft="签到表:↗↑↗↑↗"
        app:textRight="打开签到界面"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <com.laughing8.attendancecheckingsystem.view.SettingViewFroward
        android:id="@+id/table_setting"
        app:textLeft="当前签到表设置"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <com.laughing8.attendancecheckingsystem.view.SettingViewFroward
        android:id="@+id/switch_table"
        app:textLeft="切换/新建签到表"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <com.laughing8.attendancecheckingsystem.view.SettingViewFroward
        android:layout_marginTop="10dp"
        android:id="@+id/phone_setting"
        app:textLeft="手机设置"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>